# hstatic-example

./: LICENSE  Makefile  Readme.md  hstatic-example.cabal  stack.yaml
Docker/: Dockerfile
src/: Lib.hs
