name:                hstatic-example
version:             0.1.0.0
synopsis:            An example of static compilation using ghc, stack, and docker. 
description:         Please see README.md
homepage:            https://github.com/JosephJohnCox/hstatic-example#readme
license:             BSD3
license-file:        LICENSE
author:              Joseph Cox
maintainer:          joseph.john.cox@gmail.com
copyright:           Joseph Cox c2016
category:            Optimization
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hstatic-example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -optc-static -optc-pthread -optl-static -optl-pthread -fPIC
  build-depends:       base
                     , hstatic-example
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JosephJohnCox/hstatic-example
